<resources>
    <string name="app_name">Beetles</string>
    <string name="hi">Привет,</string>
    <string name="default_player">Игрок</string>
    <string name="start_button_text">Старт игры</string>
    <string name="settings_button_text">Настройки</string>
    <string name="exit_button_text">Выход</string>
    <string name="settings_main_text">Настройки</string>
    <string name="player_input_text">Имя игрока</string>
    <string name="music_volume">Музыка включена</string>
    <string name="sounds_volume">Звуки включены</string>
    <string name="player_input_hint">Имя игрока...</string>
    <string name="button_save_settings">Сохранить</string>
    <string name="button_cancel_settings">Отменить</string>
    <string name="beetles_move_speed">Скорость движения жуков</string>
    <string name="beetles_respawn_speed">Скорость появления жуков</string>
    <string name="beetlex_max">Максимальное количество жуков: </string>
    <string name="stats">Статистика</string>
    <string name="return_button">Вернуться</string>
    <string name="top_players">Рейтинг игроков</string>
    <string name="empty_list">Список пуст</string>
</resources>