<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/main_bg">


    <TextView
        android:id="@+id/setting_main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_main_text"
        android:textSize="36dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <EditText
            android:id="@+id/inputPlayerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/default_player"
            android:textAlignment="textEnd"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"/>

        <CheckBox
            android:id="@+id/soundVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sounds_volume"
            android:layout_marginBottom="10dp"
            android:checked="true"/>

        <CheckBox
            android:id="@+id/musicVolume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_volume"
            android:layout_marginBottom="10dp"
            android:checked="true"/>

        <TextView
            android:id="@+id/beetlesMoveSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beetles_move_speed"
            android:layout_marginBottom="10dp"/>

        <SeekBar
            android:id="@+id/beetlesMoveSpeedBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/beetlesRespawnSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beetles_respawn_speed"
            android:layout_marginBottom="10dp"/>

        <SeekBar
            android:id="@+id/beetlesRespawnSpeedBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/button_save_settings"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/buttons"/>

            <Button
                android:id="@+id/cancelSettingsButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/button_cancel_settings"
                android:layout_marginLeft="5dp"
                android:backgroundTint="@color/buttons"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>